Fix: loading z-index, jittering

--- a/src/app/visualization-user/visualization-user.component.scss
+++ b/src/app/visualization-user/visualization-user.component.scss
@@ -1,16 +1,13 @@
 #graphContainer {
     padding: 0.75rem;
-    position: center;
+    position: relative;
     max-height: 100%;
     max-width: 100%;
 }
 
 .scroll {
-    // overflow-y: auto;
-    // overflow-x: auto;
     max-height: 100%;
     width: 100%;
-    // height: 28rem;
     position: relative;
 }
 
